<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">McAfee</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_sort">Sort</string>

    <string-array name="sort_list">
        <item>Random</item>
        <item>Sort By Price</item>
        <item>Sort By Rating</item>
    </string-array>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_details">App Details</string>
    
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_type">Type</string>
    <string name="label_price">Price</string>
    <string name="label_users">Users</string>
    <string name="label_last_update">Last Update</string>
   
</resources>